button text overflow fix

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -191,16 +191,15 @@
     margin-top: 30px;
     margin-right: 4px;
     text-transform: uppercase;
-    width: 125px;
+    min-width: 180px;
     height: 45px;
-    padding: 15px 14px;
-    font-size: 12px; }
+    padding: 15px 14px; }
   .hero-area .contents .btn-border {
     border: 1px solid #fff;
     color: #fff;
     -webkit-box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-    width: 122px;
+    min-width: 180px;
     height: 45px;
     padding: 15px 15px; }
   .hero-area .intro-img {
